# spotifyd

./: Cargo.toml
