[package]
authors = ["Simon Persson <simon@flaskpost.org>", "Sven Lechner <sven.lechner@rwth-aachen.de>"]
edition = "2018"
name = "spotifyd"
version = "0.2.20"

[dependencies.rspotify]
git = "https://github.com/sabino/rspotify"
branch = "master"
version = "0.7.0"

[dependencies.alsa]
git = "https://github.com/sabino/alsa-rs"
version = "0.4.1"
branch = "master"
optional = true

[dependencies]
chrono = "0.4"
daemonize = "0.4"
dbus = { version = "0.6", optional = true }
dbus-tokio = { version = "0.2", optional = true }
failure = "0.1.6"
fern = { version = "0.5.9", features = ["syslog-4"] }
futures = "0.1"
gethostname = "0.2.0"
hex = "0.4"
keyring = { version = "0.7.1", optional = true }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.6"
percent-encoding = "2.1.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_ini = "0.2.0"
sha-1 = "0.8"
structopt = "0.3.7"
syslog = "4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-signal = "0.1"
url = "1.7"
xdg = "2.2"
whoami = "0.6.0"

[dependencies.librespot]
version = "0.1.0"
default-features = false
features = ["with-tremor"]
git = "https://github.com/sabino/librespot"
branch = "dev-2"

[dev-dependencies]
env_logger = "0.7"

[features]
alsa_backend = ["librespot/alsa-backend", "alsa"]
dbus_keyring = ["keyring"]
dbus_mpris = ["dbus", "dbus-tokio"]
default = ["alsa_backend"]
portaudio_backend = ["librespot/portaudio-backend"]
pulseaudio_backend = ["librespot/pulseaudio-backend"]
rodio_backend = ["librespot/rodio-backend"]
